<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PokeRanch</string>
    <string name="left">←</string>
    <string name="right">→</string>
    <string name="up">↑</string>
    <string name="down">↓</string>
    <string name="title_activity_city">CityActivity</string>
    <string name="title_activity_wild">WildActivity</string>
    <string name="button_new">New Game</string>
    <string name="button_load">Load</string>
    <string name="button_help">Help</string>
    <string name="button_exit">Exit</string>
    <string name="next_text">&gt;</string>
    <string name="prev_text">&lt;</string>
    <string name="back_main">Back</string>
    <string name="confirmation_name">Confirm</string>
    <string name="Love">♥</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_scene_battle">SceneBattleActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_user_turn_battle">UserTurnBattleActivity</string>
    <string name="title_activity_enemy_turn_battle_scene">EnemyTurnBattleScene</string>
    <string name="title_activity_main_battle">MainBattleActivity</string>
    <string name="title_activity_combinatorium">CombinatoriumActivity</string>
    <string name="Special">X</string>
    <string name="title_activity_combinatorium_activiry">CombinatoriumActiviry</string>
    <string name="save_btn">Save</string>
    <string name="load_btn">Load</string>
    <string name="back_btn">Back</string>
    <string name="CurrentMoney">Current Money: </string>
    <string name="Amount">Amount</string>
    <string name="button_buysell">Buy / Sell</string>
    <string name="button_back">Back</string>
    <string name="button_combine">Combine</string>
    <string name="button_backCombine">Back</string>    
    <string name="PokeNameHint">Pokemon Name</string> 
</resources>