<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/buttonLEFT"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="2"
        android:text="@string/left" />

    <Space
        android:layout_column="1"
        android:layout_gravity="fill_vertical"
        android:layout_row="5" />

    <Button
        android:id="@+id/buttonUP"
        android:layout_column="2"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:text="@string/up" />

    <Button
        android:id="@+id/buttonRIGHT"
        android:layout_column="3"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:text="@string/right" />

    <Button
        android:id="@+id/buttonDOWN"
        android:layout_column="2"
        android:layout_gravity="left|top"
        android:layout_row="6"
        android:text="@string/down" />

    <Button
        android:id="@+id/LoveLove"
        android:layout_column="2"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:text="@string/Love" />

</GridLayout>