<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
 
 
    <Spinner
        android:layout_gravity="center"
        android:id="@+id/Monster1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
        <Spinner
        android:layout_gravity="center"
        android:id="@+id/Monster2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        
        <EditText
        android:id="@+id/PokeName"
        android:background="#ffcccccc" 
        android:layout_width="250dip"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""
        android:ems="10"
        android:inputType="textNoSuggestions"
        android:hint="@string/PokeNameHint"
         >
        </EditText>
 
     <LinearLayout android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:layout_gravity="center"
       >
      <Button
        android:id="@+id/btnCombine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="180dip"
        style="@style/btnStyleBlackpearl"
        android:text="@string/button_combine" />
    
        <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:onClick="backtoMap"
        style="@style/btnStyleBlackpearl"
        android:text="@string/button_backCombine" />
        
        </LinearLayout>
        
            <TextView
        android:textColor="#ffff0000"
        android:id="@+id/messageCombine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="" />
     
            <TextView
            android:id="@+id/MonsterHasil"
            android:background="#CCDDDDDD"   
            android:layout_width="200dp"
            android:layout_height="90dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="5dip"
            android:textSize="12sp"
            android:text ="" />
 
</LinearLayout>